# built

./: .gitignore  AI_ML_LLM_SYNC_VERIFICATION.md  BACKUP_SYSTEM_README.md  BUILD_ROOT_CLEANUP_REPORT.md  CORE_ORCHESTRATOR_WIRING_REPORT.md  Cargo.toml  DISPATCH_CRATE_FIX_REPORT.md  DPI_CRATE_FIX_REPORT.md  FINAL_VALIDATION_REPORT.md  FULL_WORKSPACE_BUILD_REPORT.md  GITHUB_SYNC_README.md  PROMPT-15F_ENVIRONMENT_BOOTSTRAP_FIX.md  PROMPT-15G_AGENT_ISOLATION_FIX.md  PROMPT12_INSTALLATION_SUMMARY.md  REPORTING_CRATE_FIX_REPORT.md  RUNTIME_VALIDATION_REPORT.md  SYSTEMD_INTEGRATION_REPORT.md  TUNER_CRATE_FIX_REPORT.md  backup-sync.service  backup_sync.py  backup_sync.sh  install.sh  install_manifest.json  mnt-pendrive.mount  pendrive-mount.mount  post_install_validator.py  provision_artifacts_cert.sh  provision_trust_material.sh  requirements.txt  setup_github_sync.sh  uninstall.sh
Clean Prompt 23rd Dec/: 0 - PROMPT 0 PROJECT SKELETON & LEGAL.txt  1 - PROMPT 1 THE CORE KERNEL (Trust Root).txt  10 - PROMPT 10 FORENSICS ENGINE & REPORTING.txt  11 - PROMPT 11 DYNAMIC INSTALLER, OS TUNING & RESOURCE GOVERNOR.txt  12 - PROMPT 12 OPS CLI & SRE TOOLING.txt  13 - PROMPT 13 MANAGEMENT CONSOLE (REACT + WASM).txt  14 - PROMPT 14 RELEASE GATE & GOLD MASTER VERIFICATION.txt  15 - PROMPT 15 ADVANCED FORENSICS (Malware DNA & Metadata Diffing).txt  16 - PROMPT 16 NARRATIVE ENGINE (Contextual Storytelling).txt  17 - PROMPT 17 AI SAFETY GOVERNOR (Trust & Verification).txt  18 - PROMPT 18 THREAT INTELLIGENCE FEED ENGINE (Ingest & Score).txt  19 - PROMPT 19 RED TEAM SIMULATOR (Adversary Emulation).txt  2 - PROMPT 2 SECURE MESSAGE BUS & API GATEWAY.txt  21 - PROMPT 21 THE SENTINEL (Self-Defense & Anti-Tamper).txt  22 - PROMPT 22 COMMAND CENTER (The React Dashboard).txt  23 - PROMPT 23 SYSTEM RESOURCE TUNER & SWAP ENFORCER.txt  24 - PROMPT 24 UNIFIED TRAINING ORCHESTRATOR (Disk-Aware).txt  25 - PROMPT 25 CO-LOCATION PORT GUARD.txt  26 - ?PROMPT 26 STANDALONE DPI PROBE (High-Performance Sensor).txt  3 - PROMPT 3 SCALABLE THREAT GRAPH & INTEL.txt  (+18 more)
core/ai/: Cargo.toml
core/ai/inference/src/: loader.rs
core/ai/models/: create_inference_schema.sql  generate_shap_baseline.py  model_signing_key.pub  models.manifest.json  risk_model.model  risk_model_shap_baseline.json  risk_model_training_data.npy  sign_manifest.py  train_risk_model.py
core/ai/security/: signature.rs
core/audit/: Cargo.toml
core/bus/: Cargo.toml
core/dispatch/: Cargo.toml
core/dispatch/dispatcher/src/: acknowledgment.rs  audit.rs  delivery.rs  dispatcher.rs  reentrancy.rs  replay.rs  rollback.rs  router.rs  safety.rs  signature.rs  timeout.rs  verifier.rs
core/dispatch/enforcement/src/security/: signature.rs
core/dispatch/protocol/: directive_envelope.rs
core/dispatch/security/: signature.rs  trust_chain.rs
core/dispatch/src/: lib.rs
core/engine/: Cargo.toml
core/engine/orchestrator/src/: db.rs  lib.rs  main.rs  retention_enforcer.rs  retention_main.rs
core/guardrails/: Cargo.toml  guardrails.yaml
core/ingest/: Cargo.toml
core/ingest/src/: dedupe.rs  http_main.rs  http_server.rs  main.rs  ordering.rs
core/ingest/src/security/: identity.rs  replay_protection.rs  revocation.rs  trust_chain.rs  trust_store.rs
core/intel/: Cargo.toml
core/network_scanner/: Cargo.toml
core/network_scanner/src/: security.rs
core/policy/: Cargo.toml
core/policy/config/: validation.rs
core/policy/engine/src/: audit.rs  compiler.rs  conflict.rs  context.rs  decision.rs  enforcement.rs  engine.rs  errors.rs  evaluator.rs  lib.rs  main.rs  matcher.rs  policy.rs  precedence.rs
core/policy/output/: audit_record.rs  directive.rs  mod.rs  receipt.rs
core/policy/policies/: lateral_movement.yaml  persistence.yaml  privilege_abuse.yaml  ransomware_response.yaml
core/policy/security/: mod.rs  revocation.rs  sign_policy.rs  signature.rs  trust_chain.rs  verification.rs
core/policy/tests/: ring_verify_test.rs  version_rollback_tests.rs
core/policy/tools/: debug_sign.rs  extract_payload.rs  extract_pubkey_simple.rs  extract_signature.rs  ring_verify_test.rs  sign_policies.rs  test_resign.rs  test_ring_pss_verify.rs  test_sign_verify_roundtrip.rs  verify_policy.rs  verify_with_both_algs.rs
core/reporting/: Cargo.toml
core/reporting/src/: collector.rs  evidence_store.rs  exporter.rs  hasher.rs  intel_report.rs  lib.rs  main.rs  report_builder.rs  retention.rs  timeline.rs  verifier.rs
core/reporting/src/formats/: csv.rs  html.rs  mod.rs  pdf.rs
core/response_playbooks/: Cargo.toml
core/response_playbooks/src/: security.rs
edge/agent/: Cargo.toml
edge/agent/linux/: Cargo.toml
edge/agent/linux/agent/security/: identity.rs  signing.rs
edge/agent/linux/agent/src/: backpressure.rs  envelope.rs  errors.rs  hardening.rs  main.rs  process.rs  syscalls.rs
edge/agent/linux/config/: validation.rs
edge/agent/linux/docs/: README.md
edge/agent/linux/installer/: install.sh  provision_signing_key.sh  uninstall.sh
edge/agent/linux/src/: signing.rs  transport.rs
edge/agent/linux/systemd/: ransomeye-linux-agent.service
edge/agent/windows/: Cargo.toml  WINDOWS_AGENT_CRATE_FIX_REPORT.md  WINDOWS_AGENT_NAMING_ALIGNMENT_REPORT.md
edge/agent/windows/agent/src/: backpressure.rs  envelope.rs  errors.rs  etw.rs  features.rs  filesystem.rs  hardening.rs  health.rs  lib.rs  main.rs  network.rs  process.rs  rate_limit.rs  registry.rs
edge/agent/windows/config/: validation.rs
edge/agent/windows/security/: attestation.rs  identity.rs  mod.rs  replay_protection.rs  signature.rs  signing.rs  trust_chain.rs
edge/agent/windows/src/: auth_activity.rs  backpressure.rs  buffer.rs  config.rs  event.rs  file_activity.rs  health.rs  identity.rs  lib.rs  main.rs  network_activity.rs  process_activity.rs  registry_activity.rs  signing.rs  telemetry.rs  transport.rs
edge/dpi/: Cargo.toml
edge/dpi/probe/security/: attestation.rs  signing.rs
edge/dpi/probe/src/: capture.rs  main.rs  parser.rs
edge/dpi/src/: signing.rs
qa/auditor/: Cargo.toml
qa/auditor/src/: main.rs
qa/auditor/tools/: auditor.rs  chaos.rs  replay.rs  verifier.rs
(+227 files in other folders)
