[package]
name = "ai"
version = "1.0.0"
edition = "2021"
authors = ["nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU"]
description = "RansomEye AI Advisory - Advisory-only AI recommendations without enforcement"

[lib]
name = "ai"
path = "src/lib.rs"

[dependencies]
ai_inference = { path = "inference" }
ai_explainability = { path = "explainability" }
ai_rag = { path = "rag" }
ring = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
ai_inference = { path = "inference" }
ai_explainability = { path = "explainability" }
ai_rag = { path = "rag" }
sha2 = "0.10"
hex = "0.4"

