# Path and File Name : /home/ransomeye/rebuild/ransomeye_core/Cargo.toml
# Author: nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU
# Details: Cargo workspace configuration for Phase 5 Core Correlation Engine

[package]
name = "engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "ransomeye_core"
path = "correlation/src/lib.rs"

[[bin]]
name = "ransomeye_orchestrator"
path = "orchestrator/src/main.rs"

[[bin]]
name = "ransomeye_retention_enforcer"
path = "orchestrator/src/retention_main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
parking_lot = "0.12"
indexmap = "2.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
sha2 = "0.10"
kernel = { path = "../kernel" }
policy = { path = "../policy" }
bus = { path = "../bus" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

