[package]
name = "reporting"
version = "1.0.0"
edition = "2021"

[features]
default = []
# Feature flags for planned/future reporting subsystems
future-reporting = []  # Advanced reporting features (ReportBuilder, EvidenceCollector, etc.)
future-retention = []   # Retention management features

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
printpdf = "0.7"
csv = "1.3"
once_cell = { workspace = true }
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
mockall = "0.12"

[[bin]]
name = "reporting"
path = "src/main.rs"

